# analise_municipios

./: .gitattributes  .gitignore  finding_home.ipynb
finding-home/: README.md  pyproject.toml
finding-home/finding_home/: finding_home.py
finding-home/finding_home/auxiliar/: ALIMENTOS_CONAB.csv  ALIMENTOS_CONAB.xlsx  CIDADES_LITORANEAS_IBGE.csv  cidades_ibge_full.csv  cidades_ibge_full.json  divulgacao_anos_finais_municipios_2021.xlsx  divulgacao_anos_iniciais_municipios_2021.xlsx  divulgacao_ensino_medio_municipios_2021.xlsx  furto_roubo_veiculos.csv  praias.csv  shoppings_qtd.csv
finding-home/finding_home/data/: DW.db  beaches_jsonp.json  escola-medio.csv  escola_1-4.csv  escola_5-8.csv  estupro.csv  furto_roubo_celular.csv  furto_roubo_veiculos.csv  hospitais.csv  mortes-violentas.csv  praias.csv  qtd_escolas.csv
