[tool.poetry]
name = "finding-home"
version = "0.1.0"
description = ""
authors = ["Guilherme Lourenço <gui.lourenzo@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
polars = "^0.19.19"
pandas = "^2.1.4"
beautifulsoup4 = "^4.12.2"
plotly = "^5.18.0"
streamlit = "^1.29.0"
ipykernel = "^6.27.1"
duckdb = "^0.9.2"


[tool.poetry.group.dev.dependencies]
ruff = "^0.1.7"
pylint = "^3.0.2"
coverage = "^7.3.2"
nose = "^1.3.7"
pytest = "^7.4.3"
pinocchio = "^0.4.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
